Bug 543062 - When document.write() blocks, pre-parse the tail of the buffer for speculative loads. r=jonas, a=blocking2.0-beta8.